добавлены картинки для категории и видео, добавлен хэндлер для отдачи изображения с сервера
